修复脚本逻辑错误

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
-            "args": [ "echo", "'hello'" ]
+            "args": [ "echo", "$NOTIFY_FILE" ]
         }
     ]
 }
